syntax = "proto3";

package user.v1;

option go_package = "user-service/proto/userv1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  uint32 id = 1;
  string name = 2;
  string email = 3;
  bool is_cafe_owner = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  bool is_cafe_owner = 3;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersRequest {}

message GetUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  uint32 id = 1;
  string name = 2;
  string email = 3;
  bool is_cafe_owner = 4;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  uint32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}
